--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= Instamood
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="http://code.jquery.com/jquery-latest.js")
-    script(type="text/javascript" src="/javascripts/client.js")
+    script(type="text/javascript", src="/javascripts/client.js")
+    block additional-js
   body
     block content
