--- a/views/stream.jade
+++ b/views/stream.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div
-    h2 Latitude: #{lat}, Longitude: #{lng}
+    h2 #{location_name}
   div#content
     h3 General Mood Here: #{mood}
     h4 Top 10 keywords: #{top_tags}
