--- a/views/stream.jade
+++ b/views/stream.jade
@@ -4,7 +4,7 @@ block content
   div
     h2 #{location_name}
   div#content
-    h3 General Mood Here: #{mood}
+    h3 General Mood Here: #{emotion}
     h4 Top 10 keywords: #{top_tags}
     ul#image-list
       each media in media_list
