--- a/views/index.jade
+++ b/views/index.jade
@@ -39,6 +39,8 @@ block additional-js
     console.log(emotions);
 
 block content
+  div#top-bar
+    div#logo
+  div#hint click on a location!
   div#content
-    h4 Click on a location
     #map-canvas
