--- a/views/stream.jade
+++ b/views/stream.jade
@@ -3,10 +3,11 @@ extends layout
 block content
   div#top-bar
     div#logo
-  div#info
+  div#hint
     h2 #{location_name}
-    h3 General Mood Here: #{emotion}
-    h4 Top 10 keywords: #{top_tags}
+  div#info
+    h3 Prevalent mood Here: #{emotion}
+    h4 Top 10 hashtags: #{top_tags}
   div#content
     ul#image-list
       each media in media_list
